@@ -23,6 +23,8 @@
 #include <ags/object/ags_tactable.h>
 #include <ags/object/ags_portlet.h>
 
+#include <ags/thread/ags_mutex_manager.h>
+
 #include <ags/audio/ags_port.h>
 
 #include <stdarg.h>
@@ -277,6 +279,35 @@ ags_pattern_portlet_interface_init(AgsPortletInterface *portlet)
 void
 ags_pattern_init(AgsPattern *pattern)
 {
+  AgsMutexManager *mutex_manager;
+
+  pthread_mutex_t *application_mutex;
+  pthread_mutex_t *mutex;
+  pthread_mutexattr_t attr;
+
+  /* create mutex */
+  //FIXME:JK: memory leak
+  pthread_mutexattr_init(&attr);
+  pthread_mutexattr_settype(&attr,
+			    PTHREAD_MUTEX_RECURSIVE);
+
+  mutex = (pthread_mutex_t *) malloc(sizeof(pthread_mutex_t));
+  pthread_mutex_init(mutex,
+		     &attr);
+
+  /* insert mutex */
+  mutex_manager = ags_mutex_manager_get_instance();
+  application_mutex = ags_mutex_manager_get_application_mutex(mutex_manager);
+  
+  pthread_mutex_lock(application_mutex);
+
+  ags_mutex_manager_insert(mutex_manager,
+			   (GObject *) pattern,
+			   mutex);
+  
+  pthread_mutex_unlock(application_mutex);
+
+  /*  */
   pattern->timestamp = NULL;
 
   pattern->dim[0] = 0;
